--- a/index.html
+++ b/index.html
@@ -115,16 +115,16 @@
                                         <a href="#about">About</a>
                                     </li>
                                     <li>
-                                        <a href="#gallery">Gallery</a>
+                                        <a href="#gallery">Goals</a>
                                     </li>
                                     <li>
-                                        <a href="#services">Services</a>
+                                        <a href="#services">Transforming</a>
                                     </li>
                                     <li>
-                                        <a href="#testimonials">Testimonials</a>
+                                        <a href="#testimonials">Feedback</a>
                                     </li>
                                     <li>
-                                        <a href="#clients">Clients</a>
+                                        <a href="#clients">Roadmap</a>
                                     </li>
                                 </ul>
                             </nav>
@@ -406,7 +406,7 @@
                     <div class="row flex-row">
                         <div class="flex-row-start">
                             <div class="section-heading">
-                                <h3>FUN</h3>
+                                <h3>Roadmap</h3>
                                 <h2 class="section-title">
                                     Catch the Cool Breeze of Durov's Icy Tub
                                     (DIB) Roadmap
