--- a/index.html
+++ b/index.html
@@ -124,7 +124,10 @@
                                         <a href="#testimonials">Feedback</a>
                                     </li>
                                     <li>
-                                        <a href="#clients">Roadmap</a>
+                                        <a href="#roadmap">Roadmap</a>
+                                    </li>
+                                    <li>
+                                        <a href="#tokenomics">Tokenomics</a>
                                     </li>
                                 </ul>
                             </nav>
@@ -402,7 +405,7 @@
                     </div>
                 </aside>
 
-                <section id="clients" class="scrollto clearfix">
+                <section id="roadmap" class="scrollto clearfix">
                     <div class="row flex-row">
                         <div class="flex-row-start">
                             <div class="section-heading">
@@ -463,15 +466,13 @@
 
                 <!--Pricing Tables-->
                 <section
-                    id="pricing"
+                    id="tokenomics"
                     class="secondary-color text-center scrollto clearfix"
                 >
                     <div class="row clearfix">
                         <div class="section-heading">
-                            <h3>YOUR CHOICE</h3>
-                            <h2 class="section-title">
-                                Make the right choice - join the fam.
-                            </h2>
+                            <h2 class="section-title">Tokenomics</h2>
+                            <img src="images/tokenomics.png" />
                         </div>
 
                         <!--End Pricing Block-->
